Hide hourly forecast text overflow in grid & fix search overlay top positioning on mobile

--- a/components/Card/Forecast/Forecast.module.css
+++ b/components/Card/Forecast/Forecast.module.css
@@ -13,5 +13,6 @@
 }
 
 .forecast__hourly-forecasts p {
+  overflow: hidden;
   margin-left: 0.25rem;
 }
