--- a/components/Header/SearchOverlay/SearchOverlay.module.css
+++ b/components/Header/SearchOverlay/SearchOverlay.module.css
@@ -11,13 +11,13 @@
 
 @media screen and (max-width: 576px) {
   .search-overlay {
-    top: 3.5rem;
+    top: 2.75rem;
   }
 }
 
 @media screen and (max-width: 460px) {
   .search-overlay {
-    top: 5rem;
+    top: 4.25rem;
   }
 }
 
